<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">


        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/profile_picture_des"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            loadImage="@{representative.official.photoUrl}"
            tools:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of The United States" />

        <TextView
            android:id="@+id/representative_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:text="@{representative.official.name}"

            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="Joe Biden" />

        <TextView
            android:id="@+id/party_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:text="@{representative.official.party}"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/representative_name"
            tools:text="Democratic Party" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/twitter_url"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/web_url"
            android:src="@drawable/ic_www"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:layout_constraintStart_toEndOf="@id/party_name"
            app:layout_constraintTop_toTopOf="@+id/facebook_icon" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/fb_url"

            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="@+id/twitter_icon"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/wwwIcon"
            app:layout_constraintTop_toTopOf="@+id/twitter_icon" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>